# LearningWebGPU

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.bat  webgpu-utils.h
headers/: engine.hpp  game.hpp  renderer.hpp  time.hpp  utils.hpp
src/: engine.cpp  game.cpp  renderer.cpp  time.cpp  utils.cpp
